# NDKProject

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/williamgdev/example/ndkproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl_code.cpp  native-lib.cpp
app/src/main/java/com/williamgdev/example/ndkproject/: ConfigChooser.java  ContextFactory.java  GL2JNILib.java  GL2JNIView.java  MainActivity.java  Renderer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/williamgdev/example/ndkproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
